# atcoder-rust-base

./: .genignore  .gitignore  Cargo.toml  LICENSE  README.md  cargo-generate.toml  dep-tests.toml  test-examples.toml  test-with-generated-opts.toml
.cargo/: config
.github/workflows/: ci.yml  update.yml
dep-tests/: Cargo.toml
dep-tests/src/: main.rs
examples/: abc054-c.rs  abc057-b-naive.rs  abc057-b-proconio.rs  abc057-b-text-io.rs  abc057-b-whiteread.rs  abc073-d.rs  abc084-d.rs  abc118-b-naive.rs  abc118-b-proconio.rs  abc118-b-text-io.rs  abc118-b-whiteread.rs  abc120-d.rs  abc121-b-naive.rs  abc121-b-proconio.rs  abc121-b-text-io.rs  abc121-b-whiteread.rs  abc122-c.rs  abc129-f.rs  abc141-c.rs  abc142-c.rs  abc142-d.rs  abc143-d.rs  abc144-d.rs  abc145-c.rs  abc150-d.rs  abc151-d.rs  abc154-d.rs  abc154-e.rs  abc156-d.rs  abc157-d.rs  abc157-e-naive.rs  abc157-e-proconio.rs  abc157-e-text-io.rs  abc157-e-whiteread.rs  abc160-e.rs  abc162-c.rs  abc165-b.rs  abc165-c.rs  abc166-b.rs  abc168-b.rs  (+34 more)
examples/testers/: apc001-c.py  practice-b.py
examples/testsets/abc129-f/in/: sub1_killer_01.txt  sub1_killer_02.txt  sub1_killer_03.txt  sub1_killer_04.txt  sub1_killer_05.txt  sub1_killer_06.txt  sub1_killer_07.txt  sub1_large_01.txt  sub1_large_02.txt  sub1_large_03.txt  sub1_large_04.txt  sub1_large_05.txt  sub1_large_06.txt  sub1_large_07.txt  sub1_large_08.txt  sub1_large_09.txt  sub1_rand_01.txt  sub1_rand_02.txt  sub1_rand_03.txt  sub1_rand_04.txt  sub1_rand_05.txt  sub1_rand_06.txt  sub1_rand_07.txt  sub1_rand_08.txt  sub1_rand_09.txt  sub1_rand_10.txt  sub1_small_01.txt  sub1_small_02.txt  sub1_small_03.txt  sub1_small_04.txt  sub1_small_05.txt  sub1_small_06.txt
examples/testsets/abc144-d/in/: handmade03.txt  handmade04.txt  random05.txt  random06.txt  random07.txt  random08.txt  random09.txt  random10.txt  random11.txt  random12.txt  random13.txt  random14.txt
examples/testsets/apg4b-ex25/in/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt
examples/testsets/apg4b-ex26/in/: sample_01.txt  sample_02.txt  sample_03.txt  sample_04.txt  sample_05.txt  sample_06.txt  sample_07.txt  sample_08.txt  sample_09.txt
examples/testsets/atc001-b/in/: 00_sample_01.txt
examples/testsets/atc002-b/in/: sample_01.txt  sample_02.txt
examples/testsets/practice-a/in/: 00_sample_1.txt  00_sample_2.txt
src/: main.rs
tests/: defmac.rs  sample_inputs.rs  test_jemallocator.rs  test_num_derive.rs
tools/dep-tests/: Cargo.toml
tools/test-examples/: Cargo.toml
tools/test-examples/src/: main.rs
tools/test-with-generated-opts/: Cargo.toml
tools/test-with-generated-opts/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
