# -*- coding:utf-8-unix -*-

[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# AtCoder 2020年言語アップデート以降に使用できるクレート。
# 次のページに各クレートについての細かい紹介があります。
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update

# 入出力改善
proconio = { version = "=0.3.4", features = ["derive"] }

# 数値関連のサポート強化
#num = "=0.2.1"
#num-bigint = "=0.2.5"
#num-complex = "=0.2.4"
#num-integer = "=0.1.42"
#num-iter = "=0.1.40"
#num-rational = "=0.2.3"
#num-traits = "=0.2.11"
#num-derive = "=0.3.0"

# 多次元配列
#ndarray = "=0.13.0"

# 線形代数
#nalgebra = "=0.19.0"
#alga = "=0.9.2"

# 数学関数
#libm = "=0.2.1"

# 乱数
#rand = { version = "=0.7.3", features = ["small_rng"] }
#getrandom = "=0.1.14"
#rand_chacha = "=0.2.1"
#rand_core = "=0.5.1"
#rand_hc = "=0.2.0"
#rand_pcg = "=0.2.1"
#rand_distr = "=0.2.2"

# グラフ
#petgraph = "=0.5.0"

# 順序を保持する連想配列
#indexmap = "=1.3.0"

# 正規表現
#regex = "=1.3.3"

# 遅延初期化グローバル変数
#lazy_static = "=1.4.0"

# 浮動小数点数の Ord, Eq 実装
#ordered-float = "=1.0.2"

# ASCII 文字列の取り扱いの強化
#ascii = "=1.0.0"

# 順列
#permutohedron = "=0.2.4"

# スライスの強化
#superslice = "=1.0.0"

# イテレータの強化
#itertools = "=0.8.2"
#itertools-num = "=0.1.3"

# コレクションを生成するマクロ
#maplit = "=1.0.2"

# インスタント enum
#either = "=1.5.3"

# 永続データ構造
#im-rc = "=14.1.0"

# ビットで管理する集合
#fixedbitset = "=0.2.0"
#bitset-fixed = "=0.1.0"

# 入力ライブラリ
#text_io = "=0.1.7"
#whiteread = "=0.5.0"

# 高速なハッシュ関数
#rustc-hash = "=1.0.1"

# 少量向けに最適化された Vec
#smallvec = "=1.1.0"

# ---------------------------------------------------------------------

[dev-dependencies]
cli_test_dir = "0.1"
