[package]
name = "dep-tests"
version = "0.0.0"
authors = []
edition = "2018"
description = "Run all of the tests in the dependency graph."
publish = false

[dependencies]
cargo = "0.40.0"
failure = "0.1.6"
fs_extra = "1.1.0"
itertools = "0.8.2"
maplit = "1.0.2"
once_cell = "1.2.0"
serde = { version = "1.0.103", features = ["derive"] }
structopt = "0.3.5"
toml = "0.5.5"
