[package]
name = "xtask"
version = "0.0.0"
edition = "2018"
publish = false
description = "Test the examples"

[dependencies]
anyhow = "1.0.31"
approx = "0.3.2"
env_logger = "0.7.1"
indexmap = { version = "1.3.2", features = ["serde-1"] }
itertools = "0.9.0"
log = "0.4.8"
maplit = "1.0.2"
nom = "5.1.1"
once_cell = "1.4.0"
regex = "1.3.7"
scraper = "0.12.0"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
shell-escape = "0.1.4"
structopt = "0.3.14"
toml = "0.5.6"
ureq = { version = "1.1.1", default-features = false, features = ["tls"] }
url = { version = "2.1.1", features = ["serde"] }
which = { version = "3.1.1", default-features = false }
either = "1.5.3"
fallible-iterator = "0.2.0"
