[package]
name = "test-with-generated-opts"
version = "0.0.0"
edition = "2018"
publish = false
description = "Test with `rustc-dep-option-generator`."

[dependencies]
anyhow = "1.0.25"
approx = "0.3.2"
env_logger = "0.7.1"
indexmap = { version = "1.3.0", features = ["serde-1"] }
itertools = "0.8.2"
log = "0.4.8"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
shell-escape = "0.1.4"
structopt = "0.3.5"
tempdir = "0.3.7"
toml = "0.5.5"
which = { version = "3.1.0", default-features = false }
