[package]
name = "test-with-generated-opts"
version = "0.0.0"
edition = "2018"
publish = false
description = "Test with `rustc-dep-option-generator`."

[dependencies]
anyhow = "1.0.26"
approx = "0.3.2"
env_logger = "0.7.1"
indexmap = { version = "1.3.1", features = ["serde-1"] }
itertools = "0.8.2"
log = "0.4.8"
maplit = "1.0.2"
nom = "5.1.0"
once_cell = "1.3.0"
regex = "1.3.3"
scraper = "0.11.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
shell-escape = "0.1.4"
structopt = "0.3.7"
toml = "0.5.5"
ureq = "0.11.3"
url = { version = "2.1.1", features = ["serde"] }
which = { version = "3.1.0", default-features = false }
either = "1.5.3"
fallible-iterator = "0.2.0"
